abstract class AppEvent {
}

export default AppEvent;