@startuml

hide empty members

package "github.com/nodebits/linux-joystick" {
    class Joystick
}

package "interfaces" {
    interface IObservable {
        + registerObserver(observer : IObserver)
        + removeObserver(observer : IObserver)
        + notify(event: AppEvent)
    }

    interface IObserver {
        + receiveNotification(event : AppEvent)
    }
}

'app entities

package "domain" {
    class LogitechJoystick <<Observable>> implements IObservable {
        + calibrate()
        + notify()
        + registerObserver(observer: Observer)
        + removeObserver(observer: Observer)
    }

    enum AppEvent{

    }

    AppEvent "<<using>>" <.. LogitechJoystick
}

package "service" {
    class UdpService <<Singleton>> {
        + getInstance() : UdpService
        + send(msg : string, addr : string, port : int)
    }

    class RemoteControl <<Singleton>> implements IObserver {
        + receiveNotification(event : AppEvent)
    }
}

'relations
Joystick "<<using>>" <... LogitechJoystick
RemoteControl "<<using>>" ..> LogitechJoystick
RemoteControl ..> "<<using>>" UdpService

@enduml